objects/Car__c.object
<CustomObject>
    <fields>
        <fullName>RegistrationId__c</fullName>
        <label>RegistrationId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Talks</fullName>
                </value>
                <value>
                    <fullName>Deal</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Expense__c</fullName>
        <label>Total Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Car</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>CarId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>